--- a/football-tracking/football_track.ipynb
+++ b/football-tracking/football_track.ipynb
@@ -33,6 +33,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference on video clip"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -824,7 +831,51 @@
    ],
    "source": [
     "model = YOLO('yolov8x')\n",
-    "results = model.predict('./data/08fd33_4.mp4', save=True, stream=True)"
+    "results = model.predict('./data/08fd33_4.mp4', save=True, output_dir='./data/', stream=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Detected Objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "YOLOv8 is capable of detecting 80 different objects in images and video clips. For this task I am just looking for two classes, a `Person` and a `Sports Ball`. The full list of classes however can be seen below:\n",
+    "\n",
+    "| Index |     Object     | Index |     Object     | Index |     Object     | Index |     Object     |\n",
+    "|:-----:|:--------------:|:-----:|:--------------:|:-----:|:--------------:|:-----:|:--------------:|\n",
+    "|   **0**   |    **person**      |  20   |    elephant    |  40   |   wine glass   |  60   |  dining table  |\n",
+    "|   1   |    bicycle     |  21   |     bear       |  41   |      cup       |  61   |     toilet     |\n",
+    "|   2   |      car       |  22   |     zebra      |  42   |      fork      |  62   |       tv       |\n",
+    "|   3   |  motorcycle   |  23   |    giraffe     |  43   |     knife      |  63   |     laptop     |\n",
+    "|   4   |   airplane     |  24   |   backpack     |  44   |     spoon      |  64   |     mouse      |\n",
+    "|   5   |      bus       |  25   |    umbrella    |  45   |      bowl      |  65   |     remote     |\n",
+    "|   6   |     train      |  26   |    handbag     |  46   |    banana      |  66   |   keyboard     |\n",
+    "|   7   |     truck      |  27   |      tie       |  47   |     apple      |  67   |  cell phone    |\n",
+    "|   8   |     boat       |  28   |    suitcase    |  48   |   sandwich     |  68   |   microwave    |\n",
+    "|   9   | traffic light  |  29   |    frisbee     |  49   |    orange      |  69   |     oven       |\n",
+    "|  10   | fire hydrant   |  30   |     skis       |  50   |   broccoli     |  70   |    toaster     |\n",
+    "|  11   |   stop sign    |  31   |   snowboard    |  51   |    carrot      |  71   |      sink      |\n",
+    "|  12   | parking meter  |  **32**   |  **sports ball**   |  52   |    hot dog     |  72   | refrigerator   |\n",
+    "|  13   |     bench      |  33   |     kite       |  53   |     pizza      |  73   |     book       |\n",
+    "|  14   |      bird      |  34   | baseball bat   |  54   |     donut      |  74   |     clock      |\n",
+    "|  15   |      cat       |  35   | baseball glove |  55   |     cake       |  75   |     vase       |\n",
+    "|  16   |      dog       |  36   |   skateboard   |  56   |     chair      |  76   |    scissors    |\n",
+    "|  17   |     horse      |  37   |    surfboard   |  57   |     couch      |  77   |  teddy bear    |\n",
+    "|  18   |     sheep      |  38   |  tennis racket |  58   | potted plant   |  78   |   hair drier   |\n",
+    "|  19   |      cow       |  39   |     bottle     |  59   |      bed       |  79   |   toothbrush   |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can loop through the results to see what was detected. These results, provide comprehensive information about detected objects, their locations, classes, and confidence scores. `cls: tensor([0.])` is a `Person`, `cls: tensor([32.])` is the sports ball. Approximately 20 people were found in the video clip and 1 ball. However ball tracking not really good, the model is detecting both players on pitch and spectators off pitch and we are not using colours to distingish teams or the referee."
    ]
   },
   {
@@ -1221,12 +1272,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "problems,\n",
-    "ball tracking not really good\n",
-    "players on pitch and spectators off pitch\n",
-    "if colour for ref is spotted then label as a ref."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
