--- a/football-tracking/football_track.ipynb
+++ b/football-tracking/football_track.ipynb
@@ -1272,7 +1272,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![Football Tracking Output](https://raw.githubusercontent.com/rob-sullivan/ai/football-tracking/football-tracking/output.PNG)\n"
+   ]
   },
   {
    "cell_type": "markdown",
