--- a/football-tracking/football_track.ipynb
+++ b/football-tracking/football_track.ipynb
@@ -1280,6 +1280,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Improved Object Tracking\n",
+    "By installing [ByteTrack](https://github.com/ifzhang/ByteTrack.git) we can improve multi-object tracker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##after installing bytetrack rerun "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Object Tracking"
    ]
   }
